--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
 <!-- Write your code here! -->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My HTML adventure</h1>
+    <p>
+        <strong>Lorem ipsum dolor</strong>., sit amet consectetur adipisicing elit. Repellat eaque
+         pariatur voluptatibus qui minima aut eius aliquid quae quaerat consequatur,
+          incidunt voluptates odio quasi non vero, sed minus, architecto iusto? 
+        We're basically <em>telling computers</em> what to do.
+        We're writing <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to display in our <strong>browser</strong>.
+    </p>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Hobby</th>
+        </tr>
+        <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>Coding</td>
+        </tr>
+        <tr>
+            <td>Jane</td>
+            <td>24</td>
+            <td>Reading</td>
+        </tr>
+        </table>
+    </body>
+</html>
+
